# Stock-price-forecast-with-RNN

./: .gitignore  README.md  mypy.ini  pyproject.toml
best model/: entire_weights_Coursera.data-00000-of-00001  entire_weights_Coursera.index
best model/entire_model_Coursera/: keras_metadata.pb  saved_model.pb
best model/entire_model_Coursera/variables/: variables.data-00000-of-00001  variables.index
stock_price_forecast/: data.py  main.py  predict.py  preprocess.ipynb  preprocess.py  train.py
tests/: test_stock_price_forecast.py
visualization/: Input Graphs.ipynb  Prediction Graphs.ipynb
