[tool.poetry]
name = "stock_price_forecast"
version = "0.1.0"
description = ""
authors = ["AnastasiiaSt <anastasiiastv@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scikit-learn = "^1.1.1"
pandas = "^1.4.2"
numpy = "^1.22.4"
pywin32 = "^304"
mlflow = "^1.26.0"
plotly = "^5.8.0"
nbformat = "^5.4.0"
tensorflow-gpu = "2.8.0"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
